<resources>
    <string name="application_name">BoxPlay</string>
    <string name="application_website">https://boxplay.io</string>
    <string name="application_email">caceresenzo1502@gmail.com</string>
    <string name="author_github">https://github.com/Caceresenzo</string>
    <string name="boxplay_notification_channel_main_title">BoxPlay</string>
    <string name="boxplay_notification_channel_main_description">BoxPlay services</string>
    <string name="boxplay_notification_channel_search_and_go_update_title">Search n\' Go Update</string>
    <string name="boxplay_notification_channel_search_and_go_update_description">New items provided by the Search n\' Go</string>
    <string name="boxplay_service_foreground_notification_title">BoxPlay Services</string>
    <string name="boxplay_service_foreground_notification_eta">Running...</string>
    <string name="boxplay_service_foreground_notification_button_cancel">Cancel</string>
    <string name="boxplay_service_foreground_task_actual">Task: %s</string>
    <string name="boxplay_service_foreground_task_application_update_title">Update checking</string>
    <string name="boxplay_service_foreground_task_application_update_description">Check if any BoxPlay update is available.</string>
    <string name="boxplay_service_foreground_task_searchngo_subscriptions_title">Search n\' Go Subscription</string>
    <string name="boxplay_service_foreground_task_searchngo_subscriptions_description">Fetch site and check if there is any update/new content for the item you have subscribe.</string>
    <string name="boxplay_service_foreground_task_searchngo_subscriptions_update_new_item">New content available</string>
    <string name="boxplay_service_foreground_task_searchngo_subscriptions_update_new_item_content" formatted="false">%s — %s</string>
    <string name="boxplay_service_foreground_notification_cancel_message">Cancelling asked\nStopping as soon as possible</string>
    <string name="transition_view_reveal">view_reveal</string>
    <string name="boxplay_viewhelper_recaching">Re-caching...\nPlease restart the app to apply new language everywhere!</string>
    <string name="boxplay_menu_action_search">Search</string>
    <string name="boxplay_menu_action_update">Update</string>
    <string name="boxplay_menu_action_force_service_call">Force Service Call</string>
    <string name="boxplay_menu_action_logout">Logout</string>
    <string name="boxplay_menu_searchandgo_details_action_open_in_browser">Open in browser</string>
    <string name="boxplay_menu_searchandgo_history_action_clear_history">Clear history</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="boxplay_navigation_version">BoxPlay 3</string>
    <string name="boxplay_navigation_author">by Enzo CACERES</string>
    <string name="boxplay_user">-- user --</string>
    <string name="boxplay_user_profile">Profile</string>
    <string name="boxplay_store">Store</string>
    <string name="boxplay_store_video">Video</string>
    <string name="boxplay_store_music">Music</string>
    <string name="boxplay_store_files">Files</string>
    <string name="boxplay_connect">Connect</string>
    <string name="boxplay_connect_feed">Feed</string>
    <string name="boxplay_connect_friends">Friends</string>
    <string name="boxplay_connect_chat">Chat</string>
    <string name="boxplay_culture">Culture</string>
    <string name="boxplay_culture_searchngo">Search n\' Go</string>
    <string name="boxplay_premium">Premium</string>
    <string name="boxplay_premium_adult">Adult</string>
    <string name="boxplay_mylist">My Lists</string>
    <string name="boxplay_mylist_watchlater">Watch Later</string>
    <string name="boxplay_mylist_subscriptions">Subscriptions</string>
    <string name="boxplay_other">Other</string>
    <string name="boxplay_other_settings">Settings</string>
    <string name="boxplay_other_about">About</string>
    <string name="boxplay_preferences_title">BoxPlay Settings</string>
    <string name="boxplay_update_uptodate">Already up to date!</string>
    <string name="boxplay_update_available" formatted="false">Update available! %s</string>
    <string name="boxplay_update_available_message_format" formatted="false">Version: _version_ \nName: _name_ \nSize: _size_ \n\nDownloaded: _downloaded_</string>
    <string name="boxplay_update_available_message_format_size_searching">[searching]</string>
    <string name="boxplay_update_available_message_format_size_searching_error">[error]</string>
    <string name="boxplay_update_available_download_starting">Starting downloading in background...</string>
    <string name="boxplay_update_available_install">Download finished, you can now install the update</string>
    <string name="boxplay_update_available_download_failed" formatted="false">Download failed, try again later!\n\nError: %s</string>
    <string name="boxplay_update_available_download">Download it!</string>
    <string name="boxplay_update_available_cancel">Cancel</string>
    <string name="boxplay_identification_input_username">Username</string>
    <string name="boxplay_identification_input_email">Email</string>
    <string name="boxplay_identification_input_password">Password</string>
    <string name="boxplay_identification_input_login">Login</string>
    <string name="boxplay_identification_input_login_link">Already a member? Login</string>
    <string name="boxplay_identification_input_register">Create account</string>
    <string name="boxplay_identification_input_register_link">No account yet? Create one</string>
    <string name="boxplay_identification_input_error_username_too_short">Too short, at least 4 characters.</string>
    <string name="boxplay_identification_input_error_username_too_long">Too long, maximum 16 characters.</string>
    <string name="boxplay_identification_input_error_username_illegal_character">Illegal character.</string>
    <string name="boxplay_identification_input_error_email_invalid">Invalid email address.</string>
    <string name="boxplay_identification_input_error_password_too_short">Too short, at least 4 characters.</string>
    <string name="boxplay_identification_login_working">Login in...</string>
    <string name="boxplay_identification_register_working">Registering...</string>
    <string name="boxplay_identification_error_no_internet">Your device is not connected to the Internet.</string>
    <string name="boxplay_identification_response_error_err_invalid_page">Error, invalid page.</string>
    <string name="boxplay_identification_response_error_err_invalid_limit">Error, invalid limit.</string>
    <string name="boxplay_identification_response_error_err_movie_not_found">Error, movie not found.</string>
    <string name="boxplay_identification_response_error_err_movie_not_available">Error, movie not available.</string>
    <string name="boxplay_identification_response_error_err_movie_list_unavailable">Error, movie list not available.</string>
    <string name="boxplay_identification_response_error_err_series_not_found">Error, series not found.</string>
    <string name="boxplay_identification_response_error_err_series_not_available">Error, series not available.</string>
    <string name="boxplay_identification_response_error_err_series_list_unavailable">Error, series list not available.</string>
    <string name="boxplay_identification_response_error_err_animes_not_found">Error, anime not found.</string>
    <string name="boxplay_identification_response_error_err_animes_not_available">Error, anime not available.</string>
    <string name="boxplay_identification_response_error_err_animes_list_unavailable">Error, anime list not available.</string>
    <string name="boxplay_identification_response_error_err_season_not_found">Error, season not found.</string>
    <string name="boxplay_identification_response_error_err_user_login">Error, failed to login.</string>
    <string name="boxplay_identification_response_error_err_user_not_found">Error, user not found.</string>
    <string name="boxplay_identification_response_error_err_user_register">Error, failed to register.</string>
    <string name="boxplay_identification_response_error_err_user_already_exist">Error, user already exists.</string>
    <string name="boxplay_identification_response_error_err_user_user_invalid">Error, invalid user.</string>
    <string name="boxplay_identification_response_error_err_user_invalid_format">Error, invalid user format.</string>
    <string name="boxplay_identification_response_ok">OK</string>
    <string name="boxplay_identification_response_unknown">Unknown.</string>
    <string name="boxplay_tutorial_main_drawer_title">Drawer</string>
    <string name="boxplay_tutorial_main_drawer_description">You will be able to access to other page from it!</string>
    <string name="boxplay_tutorial_main_search_title">Search</string>
    <string name="boxplay_tutorial_main_search_description">Linked to all element of the store, you will be able to search anything by name!</string>
    <string name="boxplay_tutorial_main_options_title">Quick Access Menu</string>
    <string name="boxplay_tutorial_main_options_description">Contains some commands, like updating the apps...</string>
    <string name="boxplay_tutorial_main_swipe_title">Swipeable</string>
    <string name="boxplay_tutorial_main_swipe_description">Swipe right to left to access all files!</string>
    <string name="boxplay_tutorial_main_video_title">BoxPlay Store Video</string>
    <string name="boxplay_tutorial_main_video_description">Contains all video available on the store!</string>
    <string name="boxplay_tutorial_main_music_title">BoxPlay Store Music</string>
    <string name="boxplay_tutorial_main_music_description">Contains all music available on the store!</string>
    <string name="boxplay_tutorial_video_back_title">Exit this menu</string>
    <string name="boxplay_tutorial_video_back_description">Get back to main app with this arrow or the back button</string>
    <string name="boxplay_tutorial_video_watch_list_title">Watching list</string>
    <string name="boxplay_tutorial_video_watch_list_description">Add this serie/movie in your watching list to get on it more quicker!</string>
    <string name="boxplay_tutorial_video_season_selector_title">Season selector</string>
    <string name="boxplay_tutorial_video_season_selector_description">Select any season available with this selector!</string>
    <string name="boxplay_tutorial_video_season_watched_title">Mark as watched</string>
    <string name="boxplay_tutorial_video_season_watched_description">Mark this season as watched when you finish to watch all of episodes!</string>
    <string name="boxplay_tutorial_video_episodes_title">See episodes</string>
    <string name="boxplay_tutorial_video_episodes_description">All episodes available are in this list, just watch one of them by opening the little menu!</string>
    <string name="boxplay_user_profile_profile">Profile</string>
    <string name="boxplay_store_video_video">Video</string>
    <string name="boxplay_store_video_file_type_anime">Anime%s</string>
    <string name="boxplay_store_video_file_type_serie">Serie%s</string>
    <string name="boxplay_store_video_file_type_movie">Movie%s</string>
    <string name="boxplay_store_video_file_type_animemovie">Movie%s</string>
    <string name="boxplay_store_video_type_episode">Episode</string>
    <string name="boxplay_store_video_type_oav">OAV</string>
    <string name="boxplay_culture_searchngo_searchbar_hint">Search</string>
    <string name="boxplay_culture_searchngo_settings_expandablelayout">Settings</string>
    <string name="boxplay_culture_searchngo_settings_section_providers">Providers</string>
    <string name="boxplay_culture_searchngo_settings_section_memory">Memory</string>
    <string name="boxplay_culture_searchngo_settings_memory_clear_cache">Clear Cache</string>
</resources>