<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="caceresenzo.apps.boxplay.BoxPlayActivity" >

    <item
        android:id="@+id/menu_main_action_update"
        android:icon="@drawable/icon_update_white_24dp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/boxplay_menu_action_update"/>
    <item
        android:id="@+id/menu_main_action_force_service_call"
        android:icon="@drawable/icon_loop_white_24dp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/boxplay_menu_action_force_service_call"/>
    <item
        android:id="@+id/menu_main_action_logout"
        android:icon="@drawable/icon_block_white_24dp"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/boxplay_menu_action_logout"
        android:visible="false"/>
    <item
        android:id="@+id/menu_main_action_search"
        android:icon="@drawable/icon_search_white_24dp"
        android:title="@string/boxplay_menu_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/menu_main_action_debug"
        android:showAsAction="never"
        android:title="DEBUG"
        android:visible="false"/>

</menu>